# Project-Lagrange

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake.yml
TGEngine/: CMakeLists.txt
TGEngine/application/: Calculations.cpp  Calculations.hpp  CellEntry.cpp  CellEntry.hpp  Polynomials.hpp  TGApp.cpp  TGAppGUI.hpp  TGAppIO.hpp
TGEngine/application/assets/: height.frag  perInstanceVertexShader.vert  temp.vert  wire.frag
TGEngine/application/module/: TGAppGUI.hpp  TGAppIO.cpp  TGAppIO.hpp
TGEngine/application/test/: TGTest.cpp
TGEngine/application/util/: Calculations.hpp  CellEntry.cpp  CellEntry.hpp  DataManager.hpp  Polynomials.hpp  VulkanHelper.cpp  VulkanHelper.hpp
TGEngine/private/: TGEngine.cpp
TGEngine/private/IO/: IOModule.cpp
TGEngine/private/graphics/: GUIModule.cpp  WindowModule.cpp
TGEngine/private/graphics/Vulkan/: VulkanGraphicsModule.cpp  VulkanShaderModule.cpp
TGEngine/private/imgui/: imgui_impl_x11.cpp
TGEngine/public/: Error.hpp  TGEngine.hpp
TGEngine/public/IO/: IOModule.hpp
TGEngine/public/graphics/: APILayer.hpp  GameShaderModule.hpp  WindowModule.hpp
TGEngine/public/graphics/vulkan/: VulkanModuleDef.hpp  VulkanShaderPipe.hpp
TGEngine/public/headerlibs/: ShaderPermute.hpp
TGEngine/public/imgui/: imgui_impl_x11.h
TGEngine/test/assets/: testLight.frag  testUV.vert  testvec4.vert
application/: TGApp.cpp
application/assets/: degree5.dcplt  height.frag  perInstanceVertexShader.vert  temp.vert  testInput.txt  wire.frag
application/module/: TGAppGUI.hpp  TGAppIO.hpp
application/test/: TGTest.cpp
application/util/: CellEntry.hpp  Polynomials.hpp  VulkanHelper.cpp  VulkanHelper.hpp
